--- a/public_html/payment/composer.json
+++ b/public_html/payment/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": ">=5.6.4",
         "cartalyst/stripe-laravel": "^6.0",
+        "guzzlehttp/guzzle": "^6.3",
         "laravel/cashier": "~7.0",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0"
